--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "Hey, this is BY dongyv."
+description: "Hey, this is DY."
 header-img: "img/post-bg-rwd.jpg"
 ---
 
@@ -18,7 +18,7 @@ header-img: "img/post-bg-rwd.jpg"
     <blockquote><p>冰冻三尺 非一日之寒，<br>
     积土成山 非斯须之作</p></blockquote>
 
-    <p>Hey，我是<strong>东宇(BY)</strong>，一只java程序猿，现在宁波工作。</p>
+    <p>Hey，我是<strong>东宇(DY)</strong>，一只java程序猿，现在宁波工作。</p>
 
     <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。我在GitHub主页<a href="https://github.com/dongyv">👉GitHub</a>·BY。</p>
 
